# ZEUS

./: .gitignore  Cargo.toml  README.md
.github/workflows/: compile.yml  static.yml
docs/: bsti-integration.html  changelog.html  configuration.html  getting-started.html  index.html  roadmap.html  scan_policy.html  scripts.js  styles.css  usage.html
src/: lib.rs  main.rs  translator.rs  validator.rs
src/ZAP/plugin/: exim-beta-0.7.0.zap  formhandler-beta-6.5.0.zap  hud-beta-0.18.0.zap  retest-alpha-0.8.0.zap
src/config/: severity_config.toml  verification_config.json
src/report_generator/: html_report.rs  mod.rs
src/results_parser/: mod.rs  parser.rs
src/utils/: mod.rs  setup_geckodriver.rs  setup_warp.rs
src/verification/: mod.rs  verifier.rs
src/zap_integration/: mod.rs  zap_api.rs  zap_client.rs
