[package]
name = "zeus"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
clap = "3.0"
reqwest = "0.12"
tokio = { version = "1.36", features = ["full"] }
serde_json = "1.0"
csv = "1.3.0"
rust-embed = "6.3.0"
serde = { version = "1.0", features = ["derive"] }
regex = "1.10.4"
thirtyfour = "0.31.0"
md-5 = "0.10.6"
log = "0.4.21"
indicatif = "0.16"
env_logger = "0.9"
tempfile = "3.10.1"
warp = "0.3"
once_cell = "1.9.0"
futures = "0.3"
toml = "0.5.8"
colored = "2.0"
yaml-rust = "0.4.5"
chrono = "0.4.38"